--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "electron": "^6.0.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
+    "jshint": "^2.10.2",
     "karma": "~4.2.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
