--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,12 @@
 # Only exists if Bazel was run
 /bazel-out
 
+c-sharp-projects/QuickStart/.vs/*
+c-sharp-projects/QuickStart/QuickStart.Core/bin
+c-sharp-projects/QuickStart/QuickStart.Core/obj
+c-sharp-projects/QuickStart/QuickStart.Framework/bin
+c-sharp-projects/QuickStart/QuickStart.Framework/obj
+
 # dependencies
 /node_modules
 
